[package]
name = "recon"
version = "0.1.0"
edition = "2021"
authors = ["Nrishinghananda Roy <royrustdev@gmail.com>"]
description = "A port scanner cli for active reconnaissance"
categories = ["command-line-utilities"]
keywords = ["port scanner", "scanner"]
repository = "https://github.com/royrustdev/recon.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[badges]
maintenance = { status = "experimental" }

[dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.5"
trust-dns-resolver = "0.22.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3.25"
tokio-stream = "0.1.11"
log = "0.4"
env_logger = "0.10.0"
async-trait = "0.1"
clap = { version = "3.1", features = ["cargo"] }
regex = "1"
url = "2"